force-app/main/default/objects/SFDC_Enrollment__c/SFDC_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Enrollment</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Enrollment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>