force-app/main/default/objects/SFDC_Enrollment__c/fields/Attendance_Flag__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance Flag</label>
    <type>Checkbox</type>
</CustomField>