force-app/main/default/objects/SFDC_Enrollment__c/fields/Body_Mechanics__c.field-meta.xml
<CustomField>
    <fullName>Body_Mechanics__c</fullName>
    <description>This will be the score of Competency Check 2</description>
    <label>Body Mechanics</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>