force-app/main/default/objects/SFDC_Enrollment__c/fields/Care_of_Teeth__c.field-meta.xml
<CustomField>
    <fullName>Care_of_Teeth__c</fullName>
    <inlineHelpText>Competency Check 3</inlineHelpText>
    <label>Care of Teeth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>