force-app/main/default/objects/SFDC_Enrollment__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <label>Certified</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>If(ISPICKVAL( Pass_DNP__c , &quot;Pass&quot;), true, false)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>