force-app/main/default/objects/SFDC_Enrollment__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <referenceTo>SFDC_Class__c</referenceTo>
    <relationshipLabel>Enrollments</relationshipLabel>
    <relationshipName>Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>