force-app/main/default/objects/SFDC_Enrollment__c/fields/Class_Hours__c.field-meta.xml
<CustomField>
    <fullName>Class_Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Class Hours</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>