force-app/main/default/objects/SFDC_Enrollment__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <formula>Class__r.Name</formula>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>