force-app/main/default/objects/SFDC_Enrollment__c/fields/Class_Name_Trim__c.field-meta.xml
<CustomField>
    <fullName>Class_Name_Trim__c</fullName>
    <description>This field is use in SMS Template (Test URL after setup)</description>
    <formula>SUBSTITUTE(Class_Name__c, &quot; &quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Name Trim</label>
    <type>Text</type>
</CustomField>