force-app/main/default/objects/SFDC_Enrollment__c/fields/Class_Result__c.field-meta.xml
<CustomField>
    <fullName>Class_Result__c</fullName>
    <label>Class Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Dropped</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>