force-app/main/default/objects/SFDC_Enrollment__c/fields/Class_Skills_Comfort_Level__c.field-meta.xml
<CustomField>
    <fullName>Class_Skills_Comfort_Level__c</fullName>
    <label>Class Skills Comfort Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>