force-app/main/default/objects/SFDC_Enrollment__c/fields/Communication__c.field-meta.xml
<CustomField>
    <fullName>Communication__c</fullName>
    <inlineHelpText>Competency Check 5</inlineHelpText>
    <label>Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>