force-app/main/default/objects/SFDC_Enrollment__c/fields/Competency_Score_7__c.field-meta.xml
<CustomField>
    <fullName>Competency_Score_7__c</fullName>
    <label>Competency Score 7</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>