force-app/main/default/objects/SFDC_Enrollment__c/fields/Competency_Score_8__c.field-meta.xml
<CustomField>
    <fullName>Competency_Score_8__c</fullName>
    <label>Competency Score 8</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>