force-app/main/default/objects/SFDC_Enrollment__c/fields/Computer_Use_Comfort_Level__c.field-meta.xml
<CustomField>
    <fullName>Computer_Use_Comfort_Level__c</fullName>
    <label>Computer Use Comfort Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very comfortable</fullName>
            </value>
            <value>
                <fullName>Comfortable</fullName>
            </value>
            <value>
                <fullName>Neither comfortable nor uncomfortable</fullName>
            </value>
            <value>
                <fullName>Uncomfortable</fullName>
            </value>
            <value>
                <fullName>Very uncomfortable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>