force-app/main/default/objects/SFDC_Enrollment__c/fields/Consumer_Count__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Count__c</fullName>
    <label>Consumer Count</label>
    <summaryForeignKey>Consumer_Enrollment__c.Enrollment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>