force-app/main/default/objects/SFDC_Enrollment__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <formula>Contact__r.Email +&quot; &quot;+ Contact__r.Phone+&quot; &quot;+ Contact__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Info</label>
    <type>Text</type>
</CustomField>