force-app/main/default/objects/SFDC_Enrollment__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <formula>Class__r.Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course</label>
    <type>Text</type>
</CustomField>