force-app/main/default/objects/SFDC_Enrollment__c/fields/CPR_Certificate_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>CPR_Certificate_Uploaded__c</fullName>
    <label>CPR Certificate Uploaded?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>