force-app/main/default/objects/SFDC_Enrollment__c/fields/CPR_Fail_Reason__c.field-meta.xml
<CustomField>
    <fullName>CPR_Fail_Reason__c</fullName>
    <label>CPR Fail Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Left the Class early</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>