force-app/main/default/objects/SFDC_Enrollment__c/fields/CPR_Status__c.field-meta.xml
<CustomField>
    <fullName>CPR_Status__c</fullName>
    <label>CPR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Already Certified</fullName>
                <isActive>false</isActive>
                <label>Already Certified</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>