force-app/main/default/objects/SFDC_Enrollment__c/fields/CPR_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>CPR_Valid_From__c</fullName>
    <description>CPR certificate validity start date</description>
    <label>CPR Valid From</label>
    <type>Date</type>
</CustomField>