force-app/main/default/objects/SFDC_Enrollment__c/fields/CPR_Valid_Till__c.field-meta.xml
<CustomField>
    <fullName>CPR_Valid_Till__c</fullName>
    <description>CPR certificate expiry date</description>
    <formula>CPR_Valid_From__c  + 730</formula>
    <label>CPR Valid Till</label>
    <type>Date</type>
</CustomField>