force-app/main/default/objects/SFDC_Enrollment__c/fields/date_for_test__c.field-meta.xml
<CustomField>
    <fullName>date_for_test__c</fullName>
    <label>date for test</label>
    <type>Date</type>
</CustomField>