force-app/main/default/objects/SFDC_Enrollment__c/fields/Days_to_Expire__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Expire__c</fullName>
    <description>This returns number of days left for CPR certificate expiry</description>
    <formula>CPR_Valid_Till__c  -   TODAY()</formula>
    <label>Days to Expire</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>