force-app/main/default/objects/SFDC_Enrollment__c/fields/Dress_and_Undress__c.field-meta.xml
<CustomField>
    <fullName>Dress_and_Undress__c</fullName>
    <inlineHelpText>Competency Check 4</inlineHelpText>
    <label>Dress and Undress</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>