force-app/main/default/objects/SFDC_Enrollment__c/fields/Edfund_Facility__c.field-meta.xml
<CustomField>
    <fullName>Edfund_Facility__c</fullName>
    <label>Edfund Facility associated with Provider</label>
    <length>200</length>
    <type>Text</type>
</CustomField>