force-app/main/default/objects/SFDC_Enrollment__c/fields/EdFundVendor_formula__c.field-meta.xml
<CustomField>
    <fullName>EdFundVendor_formula__c</fullName>
    <formula>Class__r.EdFund_Vendor__r.Name</formula>
    <label>EdFundVendor_formula</label>
    <type>Text</type>
</CustomField>