force-app/main/default/objects/SFDC_Enrollment__c/fields/Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Enrollment__c</fullName>
    <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
    <label>Enrollment #</label>
    <type>AutoNumber</type>
</CustomField>