force-app/main/default/objects/SFDC_Enrollment__c/fields/Enrollment_Severity__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Severity__c</fullName>
    <formula>IMAGE( 
Case( Severity__c, 
&quot;Low&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;Medium&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;High&quot;, &quot;/img/samples/flag_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;Priority Flag&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment Severity</label>
    <type>Text</type>
</CustomField>