force-app/main/default/objects/SFDC_Enrollment__c/fields/Enrollment_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_TimeStamp__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrollment TimeStamp</label>
    <type>DateTime</type>
</CustomField>