force-app/main/default/objects/SFDC_Enrollment__c/fields/Enrolment_Status_C__c.field-meta.xml
<CustomField>
    <fullName>Enrolment_Status_C__c</fullName>
    <formula>TEXT( Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enrolment Status - C</label>
    <type>Text</type>
</CustomField>