force-app/main/default/objects/SFDC_Enrollment__c/fields/Final_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>Final_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Alert Sent</label>
    <type>Checkbox</type>
</CustomField>