force-app/main/default/objects/SFDC_Enrollment__c/fields/Final_Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Assessment_Score__c</fullName>
    <label>GPA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>