force-app/main/default/objects/SFDC_Enrollment__c/fields/First_Alert_Sent__c.field-meta.xml
<CustomField>
    <fullName>First_Alert_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Alert Sent</label>
    <type>Checkbox</type>
</CustomField>