force-app/main/default/objects/SFDC_Enrollment__c/fields/Hand_Washing__c.field-meta.xml
<CustomField>
    <fullName>Hand_Washing__c</fullName>
    <inlineHelpText>Competency Check 1</inlineHelpText>
    <label>Hand Washing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>