force-app/main/default/objects/SFDC_Enrollment__c/fields/Is_CNA_record_created__c.field-meta.xml
<CustomField>
    <fullName>Is_CNA_record_created__c</fullName>
    <formula>OR((Total_Hours_Classroom_Theory__c &gt; 0), ( Total_Hours_Clinical_Preceptor__c &gt; 0))</formula>
    <label>Is CNA record created?</label>
    <type>Checkbox</type>
</CustomField>