force-app/main/default/objects/SFDC_Enrollment__c/fields/Living_Wage_Skills_Post_Class__c.field-meta.xml
<CustomField>
    <fullName>Living_Wage_Skills_Post_Class__c</fullName>
    <label>Living-Wage Skills (Post Class)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>