force-app/main/default/objects/SFDC_Enrollment__c/fields/LivingWage_Skills_Pre_Class__c.field-meta.xml
<CustomField>
    <fullName>LivingWage_Skills_Pre_Class__c</fullName>
    <label>Living-Wage Skills (Pre Class)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>