force-app/main/default/objects/SFDC_Enrollment__c/fields/MakeUp_count__c.field-meta.xml
<CustomField>
    <fullName>MakeUp_count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This will help to understand the count of makeup that has been created for this enrollment record.</description>
    <inlineHelpText>This will help to understand the count of makeup that has been created for this enrollment record.</inlineHelpText>
    <label>MakeUp count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>