force-app/main/default/objects/SFDC_Enrollment__c/fields/Mi_Point_Assessment_Score__c.field-meta.xml
<CustomField>
    <fullName>Mi_Point_Assessment_Score__c</fullName>
    <label>Credit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>