force-app/main/default/objects/SFDC_Enrollment__c/fields/Model_of_Care_MOC__c.field-meta.xml
<CustomField>
    <fullName>Model_of_Care_MOC__c</fullName>
    <label>Model Of Care (MOC)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Remediation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>