force-app/main/default/objects/SFDC_Enrollment__c/fields/No_of_student_Present__c.field-meta.xml
<CustomField>
    <fullName>No_of_student_Present__c</fullName>
    <label>Total Present</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>