force-app/main/default/objects/SFDC_Enrollment__c/fields/Pass_DNP__c.field-meta.xml
<CustomField>
    <fullName>Pass_DNP__c</fullName>
    <label>Pass/DNP</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DNP</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>