force-app/main/default/objects/SFDC_Enrollment__c/fields/Pass_DNP_C__c.field-meta.xml
<CustomField>
    <fullName>Pass_DNP_C__c</fullName>
    <formula>TEXT(Pass_DNP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pass/DNP - C</label>
    <type>Text</type>
</CustomField>