force-app/main/default/objects/SFDC_Enrollment__c/fields/Provider_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Name__c</fullName>
    <formula>Contact__r.FirstName +&apos; &apos;+ Contact__r.LastName</formula>
    <label>Provider Name</label>
    <type>Text</type>
</CustomField>