force-app/main/default/objects/SFDC_Enrollment__c/fields/Provider_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Provider_Phone_Number__c</fullName>
    <formula>Contact__r.Phone_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provider Phone Number</label>
    <type>Text</type>
</CustomField>