force-app/main/default/objects/SFDC_Enrollment__c/fields/Question1__c.field-meta.xml
<CustomField>
    <fullName>Question1__c</fullName>
    <label>Question1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>