force-app/main/default/objects/SFDC_Enrollment__c/fields/Quiz_2_Score__c.field-meta.xml
<CustomField>
    <fullName>Quiz_2_Score__c</fullName>
    <label>Quiz 2 Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>