force-app/main/default/objects/SFDC_Enrollment__c/fields/Quiz_Score_4__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Score_4__c</fullName>
    <label>Quiz Score 4</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>