force-app/main/default/objects/SFDC_Enrollment__c/fields/Remove_Reason__c.field-meta.xml
<CustomField>
    <fullName>Remove_Reason__c</fullName>
    <label>Remove Reason</label>
    <type>TextArea</type>
</CustomField>