force-app/main/default/objects/SFDC_Enrollment__c/fields/Removed_By__c.field-meta.xml
<CustomField>
    <fullName>Removed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Removed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollments_Removal</relationshipName>
    <type>Lookup</type>
</CustomField>