force-app/main/default/objects/SFDC_Enrollment__c/fields/Removed_On__c.field-meta.xml
<CustomField>
    <fullName>Removed_On__c</fullName>
    <label>Removed On</label>
    <type>Date</type>
</CustomField>