force-app/main/default/objects/SFDC_Enrollment__c/fields/Retake_Requested__c.field-meta.xml
<CustomField>
    <fullName>Retake_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make-up Class Requested</label>
    <type>Checkbox</type>
</CustomField>