force-app/main/default/objects/SFDC_Enrollment__c/fields/Satisfaction_with_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Satisfaction_with_Instructor__c</fullName>
    <label>Satisfaction with Instructor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very satisfied</fullName>
            </value>
            <value>
                <fullName>Somewhat satisfied</fullName>
            </value>
            <value>
                <fullName>Neutral</fullName>
            </value>
            <value>
                <fullName>Somewhat dissatisfied</fullName>
            </value>
            <value>
                <fullName>Very dissatisfied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>