force-app/main/default/objects/SFDC_Enrollment__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Enrollment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled</fullName>
                <default>true</default>
                <label>Enrolled</label>
            </value>
            <value>
                <fullName>Student Requested for Removal</fullName>
            </value>
            <value>
                <fullName>Student Requested for Transfer</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>1-DAY</fullName>
                <isActive>false</isActive>
                <label>1-DAY</label>
            </value>
            <value>
                <fullName>No Show</fullName>
                <isActive>false</isActive>
                <label>No Show</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
                <isActive>false</isActive>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Registered</fullName>
                <isActive>false</isActive>
                <label>Registered</label>
            </value>
            <value>
                <fullName>Waiting</fullName>
                <isActive>false</isActive>
                <label>Waiting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>