force-app/main/default/objects/SFDC_Enrollment__c/fields/Teaching_Methods_Preferred__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Methods_Preferred__c</fullName>
    <label>Teaching Methods Preferred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visual (presentations, graphs, demonstrating a task)</fullName>
            </value>
            <value>
                <fullName>Auditory (spoken word explanations)</fullName>
            </value>
            <value>
                <fullName>Reading/Writing (textbooks, writing assignments)</fullName>
            </value>
            <value>
                <fullName>Kinesthetic (hands-on, experiential teaching- practicing by doing)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>