force-app/main/default/objects/SFDC_Enrollment__c/fields/Teaching_Methods_Used__c.field-meta.xml
<CustomField>
    <fullName>Teaching_Methods_Used__c</fullName>
    <label>Teaching Methods Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Visual (presentations, graphs, demonstrating a task)</fullName>
            </value>
            <value>
                <fullName>Auditory (explaining through spoken word)</fullName>
            </value>
            <value>
                <fullName>Reading/Writing (textbooks, writing assignments)</fullName>
            </value>
            <value>
                <fullName>Kinesthetic (hands-on, experiential teaching- practicing by doing)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>