force-app/main/default/objects/SFDC_Enrollment__c/fields/Test_Field__c.field-meta.xml
<CustomField>
    <fullName>Test_Field__c</fullName>
    <label>Test Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>