force-app/main/default/objects/SFDC_Enrollment__c/fields/Total_Absent__c.field-meta.xml
<CustomField>
    <fullName>Total_Absent__c</fullName>
    <label>Total Absent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>