force-app/main/default/objects/SFDC_Enrollment__c/fields/Total_Hours_Classroom_Theory__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Classroom_Theory__c</fullName>
    <label>Total Hours (Classroom/Theory)</label>
    <summarizedField>Attendance__c.Total_CNA_Time_Classroom_Theory__c</summarizedField>
    <summaryForeignKey>Attendance__c.Enrollment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>