force-app/main/default/objects/SFDC_Enrollment__c/fields/Total_Hours_Clinical_Preceptor__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Clinical_Preceptor__c</fullName>
    <label>Total Hours (Clinical/Preceptor)</label>
    <summarizedField>Attendance__c.Total_CNA_Time_Clinical__c</summarizedField>
    <summaryForeignKey>Attendance__c.Enrollment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>