force-app/main/default/objects/SFDC_Enrollment__c/fields/Total_Present__c.field-meta.xml
<CustomField>
    <fullName>Total_Present__c</fullName>
    <label>Total Present - C</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>