force-app/main/default/objects/SFDC_Enrollment__c/fields/Transfer_Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollments1</relationshipName>
    <type>Lookup</type>
</CustomField>