force-app/main/default/objects/SFDC_Enrollment__c/fields/Transfer_Approved_On__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Approved_On__c</fullName>
    <label>Transfer Approved On</label>
    <type>Date</type>
</CustomField>